toolchain/internal/core/analysis/testdata/errors/naming/enum_member_not_pascal.vdl
// @expect: E103

enum Status {
  active
}
